--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
 
 
+/* index.css */
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
+
+/* 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -68,4 +75,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
